src/objects/Eval_Drop_Down__c.object
<CustomObject>
    <description>Drop down values used on Evals</description>
    <fields>
        <fullName>Dependent_Fields__c</fullName>
        <description>The html ids array of the fields that are controlled based on the value in this field.</description>
        <label>Dependent Fields</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Option_Name__c</fullName>
        <label>Option Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Value__c</fullName>
        <label>Option Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>This field will help us to ORDER or SORT  the picklist value display.</description>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhatId__c</fullName>
        <label>WhatId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Id_Object__c</fullName>
        <label>What Id Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>visibility_row_rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>visibility-row-rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>visibility_rules__c</fullName>
        <label>visibility_rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Eval Drop Down</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Option_Name__c</columns>
        <columns>Option_Value__c</columns>
        <columns>WhatId__c</columns>
        <columns>What_Id_Object__c</columns>
        <columns>Sequence__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>a1qJ0000000Vyg9</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Fields__c</columns>
        <columns>Option_Name__c</columns>
        <columns>Option_Value__c</columns>
        <columns>Sequence__c</columns>
        <columns>WhatId__c</columns>
        <columns>What_Id_Object__c</columns>
        <columns>visibility_rules__c</columns>
        <columns>visibility_row_rules__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WhatId__c</field>
            <operation>contains</operation>
            <value>a1qJ0000000Vyg9</value>
        </filters>
        <label>a1qJ0000000Vyg9</label>
    </listViews>
    <listViews>
        <fullName>a1qJ0000000W1sZ</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Fields__c</columns>
        <columns>Option_Name__c</columns>
        <columns>Option_Value__c</columns>
        <columns>Sequence__c</columns>
        <columns>WhatId__c</columns>
        <columns>What_Id_Object__c</columns>
        <columns>visibility_rules__c</columns>
        <columns>visibility_row_rules__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WhatId__c</field>
            <operation>contains</operation>
            <value>a1qJ0000000W1sZ</value>
        </filters>
        <label>a1qJ0000000W1sZ</label>
    </listViews>
    <nameField>
        <label>Eval Drop Down Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eval Drop Downs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>